--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,11 @@ classifier=
     Programming Language :: Python :: 3.4
     Programming Language :: Python :: 3.5
 
+[options]
+install_requires=
+    requests
+    tqdm
+
 [files]
 packages=
     language_check
