try to fix dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,9 +11,7 @@ classifier=
     Programming Language :: Python :: 3.3
     Programming Language :: Python :: 3.4
     Programming Language :: Python :: 3.5
-
-[options]
-install_requires=
+requires-dist=
     requests
     tqdm
 
