--- a/setup.cfg
+++ b/setup.cfg
@@ -11,9 +11,7 @@ classifier=
     Programming Language :: Python :: 3.3
     Programming Language :: Python :: 3.4
     Programming Language :: Python :: 3.5
-requires-dist=
-    requests
-    tqdm
+requires-dist=["requests", "tqdm"]
 
 [files]
 packages=
